# I4_0_SMIA

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  README_pypi.md  pyproject.toml  readthedocs.yaml  server.db
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-publish.yml
additional_resources/aas_ontology_reader/: utilities.py
additional_resources/aasx_package_explorer_resources/: README.md
additional_resources/gui_agent/: Dockerfile_gui_agent  docker-compose.yml  receiver.py
additional_resources/python_xmpp_server/: pyjabber.db
deploy/: agent_dt_configmap.yaml  agent_dt_deployment.yaml  componentI4_0_configmap.yaml  componentI4_0_configmap_json.yaml  componentI4_0_configmap_v2.yaml  componentI4_0_configmap_xml.yaml  componentI4_0_deployment.yaml  i4_0_smia_aas_kafka_topic.yaml  i4_0_smia_aas_manager_deployment.yaml  server.db
docker/: Dockerfile_AAS_manager_old  Dockerfile_SMIA  Dockerfile_SMIA_base  Dockerfile_SMIA_full  Dockerfile_SMIA_full_base  docker-compose.yml  requirements.txt
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  aas_developer_guide.rst  aas_model.ExtendedAssetAdministrationShell.rst  aas_model.ExtendedBase.rst  aas_model.ExtendedConceptDescription.rst  aas_model.ExtendedSubmodel.rst  aas_model.aas_model_utils.rst  aas_model.extended_aas.rst  aas_model.extended_aas_model.rst  aas_model.extended_base.rst  aas_model.extended_submodel.rst  aas_model.rst  about_the_project.rst  agents.smia_agent.rst  agents.smia_app_agent.rst  agents.smia_resource_agent.rst  assetconnection.AssetConnection.rst  assetconnection.asset_connection.rst  assetconnection.rst  behaviours.AASFSMBehaviour.rst  behaviours.HandleSvcRequestBehaviour.rst  behaviours.InitAASModelBehaviour.rst  behaviours.InitSubmodelsBehaviour.rst  behaviours.InteractionHandlingBehaviour.rst  behaviours.NegotiatingBehaviour.rst  behaviours.aas_fsm_behaviour.rst  behaviours.acl_handling_behaviour.rst  behaviours.end_behaviour.rst  behaviours.handle_capability_behaviour.rst  behaviours.handle_negotiation_behaviour.rst  behaviours.init_aas_model_behaviour.rst  behaviours.negotiating_behaviour.rst  behaviours.rst  behaviours.svc_acl_handling_behaviour.rst  conf.py  css_ontology.capability_skill_module.rst  css_ontology.capability_skill_ontology.rst  css_ontology.css_ontology_utils.rst  getting_started.rst  (+69 more)
docs/apidoc/: modules.rst  (+70 more)
examples/: HTTP_requests.txt  SMIA_Operator_article.aasx  SMIA_TransportRobot_article_1.aasx  SMIA_TransportRobot_article_2.aasx  robot_agent2_dt_configmap.yaml  robot_agent2_dt_deployment.yaml  smia-initialization.properties  submodels.properties
smia/: __init__.py  smia_cli_starter.py  smia_starter.py
src/: aas_manager.py  smia_main.py
(+1248 files in other folders)
